Fix PR kern/46828 (6.0_BETA2 and 6.0_RC1 won't start on DL320/G5p):  In ehci_get_ownership(), don't explicitly clear EHCI_LEG_HC_BIOS_OWNED  semaphore bit in the driver before asking BIOS to give up ownership.  The EHCI spec implies that the semaphore should not be changed by  the other agent and actually the previous one (introduced in rev 1.53  after 5.x) caused hangup during probe on at least two HP machines  as mentioned in the PR.  Analyzed and patch provided by Ryo ONODERA.

Should be pulled up to netbsd-6 (fatal hangup during boot).